--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -7,6 +7,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using System.Globalization
+@using System.Collections.ObjectModel;
+@using System.Collections.Specialized;
 @using Sunduk.PWA
 @using Sunduk.PWA.Shared
 @using Sunduk.PWA.Components
