--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -9,6 +9,7 @@
 @using System.Globalization
 @using System.Collections.ObjectModel;
 @using System.Collections.Specialized;
+@using System.ComponentModel.DataAnnotations;
 @using Sunduk.PWA
 @using Sunduk.PWA.Shared
 @using Sunduk.PWA.Components
